[metadata]
name = bm-instance-agent
summary = Zstack Baremetal Instance Agent
author = ya.wang
author-email = me@littleya.me
home-page = https://www.zstack.io/
python-requires = >= 2.7
version = 4.1.0

[options]
include_package_data = True
packages = find:

[options.package_data]
* = *.rst

[options.entry_points]
console_scripts =
    bm-instance-agent = bm_instance_agent.cmd.api:main

bm_instance_agent.systems.driver =
    linux = bm_instance_agent.systems.linux.driver:LinuxDriver
    windows = bm_instance_agent.systems.windows.driver:WindowsDriver
    centos = bm_instance_agent.systems.linux.distro.centos:CentOSDriver
    centos_v7_x86 = bm_instance_agent.systems.linux.distro.centos:CentOSV7X86
    centos_v7_arm = bm_instance_agent.systems.linux.distro.centos:CentOSV7ARM
    centos_v8_x86 = bm_instance_agent.systems.linux.distro.centos:CentOSV8X86
    centos_v8_arm = bm_instance_agent.systems.linux.distro.centos:CentOSV8ARM
    kylin = bm_instance_agent.systems.linux.distro.kylin:KylinDriver
    kylin_v10_arm = bm_instance_agent.systems.linux.distro.kylin:KylinV10ARM
    ubuntu = bm_instance_agent.systems.linux.distro.ubuntu:UbuntuDriver
